--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,14 @@ dependencies:
   flutter:
     sdk: flutter
 
+  animated_text_kit: ^2.2.0
   cupertino_icons: ^0.1.2
+  firebase_core: ^0.4.5
+  firebase_auth: ^0.16.1
+  cloud_firestore: ^0.13.6
+
+
+
 
 dev_dependencies:
   flutter_test:
